# ChemistryReactionCalculator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
main/: BridgeHelper.py  InternationalizationHelper.py
main/Core/: ChemistryCore.cpp  ChemistryCore.h
main/Core/EquationSolver/: Equation.h  EquationRegistry.h  ISolver.h
main/Core/Registry/: IRegistry.h  Registry.cpp  Registry.h  RegistryBuilder.h
main/Resources/data/: config.json  elements_data.json
main/Resources/language/: en_US.json  zh_CN.json
main/core/: ChemistryCore.cpp  ChemistryCore.h  DataType.h
main/core/EquationSolver/: Equation.h  EquationRegistry.cpp  EquationRegistry.h  Equations.h  ISolver.h
main/gui/: Main.py  Splash.py
main/resources/data/: config.json
main/resources/internationalization/: en_US.json  ja_JP.json  zh_CN.json
